# radar-detectability

./: .containerignore  .gitignore  AGENTS.md  Containerfile  LICENSE.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
src/detectability/: __init__.py  analysis.py  beam.py  composite.py  defaults.py  detection.py  filtering.py  georef.py  io.py  pipeline.py  state.py
src/scripts/: explore_data.py
tests/: test_analysis.py  test_beam.py  test_composite.py  test_detection.py  test_filtering.py  test_georef.py  test_io.py  test_pipeline.py  test_state.py
tests/data/: 202603191120_fivim_etop_-10_dbzh_polar_qc.h5
