[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detectability"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jussi Tiira", email = "jussi.tiira@fmi.fi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jussi Tiira/detectability#readme"
Issues = "https://github.com/Jussi Tiira/detectability/issues"
Source = "https://github.com/Jussi Tiira/detectability"

[tool.hatch.version]
path = "src/detectability/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/detectability tests}"

[tool.coverage.run]
source_pkgs = ["detectability", "tests"]
branch = true
parallel = true
omit = [
  "src/detectability/__about__.py",
]

[tool.coverage.paths]
detectability = ["src/detectability", "*/detectability/src/detectability"]
tests = ["tests", "*/detectability/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
