[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "detectability"
dynamic = ["version"]
description = 'Radar detectability product'
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = []
authors = [
  { name = "Jussi Tiira", email = "jussi.tiira@fmi.fi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "scipy",
  "xarray",
  "xradar>=0.12.0",
  "wradlib",
  "rioxarray",
]

[tool.hatch.envs.test]
extra-dependencies = [
  "pytest",
]
[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/detectability tests}"

[tool.coverage.run]
source_pkgs = ["detectability", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
detectability = ["src/detectability", "*/detectability/src/detectability"]
tests = ["tests", "*/detectability/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
